--- a/SpringSecurityTokenDemo/src/main/resources/application.yml
+++ b/SpringSecurityTokenDemo/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
     username: root
     password: 204116
     driver-class-name: com.mysql.cj.jdbc.Driver
-
-
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
 
